# data-loader

./: Cargo.toml  README.md  flake.nix  temperature.json
.sqlx/: query-afd5481503b0b42f9b9f65b4143571f596380340b3fe63dd3e98b969cfa2eb04.json
sample/: fake_raw.csv  soil_log.csv
src/: cli.rs  main.rs
