[package]
name = "data-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4.8", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
eyre = "0.6.12"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "time", "bigdecimal"] }
tokio = { version = "1.44.2", features = ["full"] }
